do not find opencl package for now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,9 @@ project( OclDeepLearning )
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
-find_package( OpenCL REQUIRED )
+#find_package( OpenCL REQUIRED )
 
-include_directories( ${OPENCL_INCLUDE_DIRS} )
+#include_directories( ${OPENCL_INCLUDE_DIRS} )
 
 
 add_subdirectory(lib)
